update keycloak.js path

--- a/js-console/src/main/webapp/index.html
+++ b/js-console/src/main/webapp/index.html
@@ -17,7 +17,7 @@
 
 <html>
 <head>
-    <script src="http://localhost:8080/js/keycloak.js"></script>
+    <script src="http://10.0.8.110:8080/js/keycloak.js"></script>
 </head>
 <body>
 
